--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "project-trios",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
@@ -10,6 +11,7 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
