--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.2.0",
     "mapbox-gl": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
